Fixed various issues

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -29,7 +29,7 @@ set (SRC src/Archiver.cpp
          src/TypeName.cpp
          src/UniqueId.cpp
          src/Variant.cpp
-         src/XMLArchiver.cpp)
+         src/XmlArchiver.cpp)
 
 set (INCLUDE include/AbstractInvoker.h
              include/AnyIterator.h
@@ -60,7 +60,7 @@ set (INCLUDE include/AbstractInvoker.h
              include/TypeTraits.h
              include/UniqueId.h
              include/Variant.h
-             include/XMLArchiver.h)
+             include/XmlArchiver.h)
 
 set (TCC tcc/AbstractInvoker.tcc
          tcc/AnyIterator.tcc
@@ -82,7 +82,7 @@ set (TCC tcc/AbstractInvoker.tcc
          tcc/TypeName.tcc
          tcc/TypeTraits.tcc
          tcc/Variant.tcc
-         tcc/XMLArchiver.tcc)
+         tcc/XmlArchiver.tcc)
 
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
