--- a/libraries/math/CMakeLists.txt
+++ b/libraries/math/CMakeLists.txt
@@ -119,10 +119,12 @@ target_link_libraries(${TEST_NAME} math testing)
 
 if(${WIN32})
   set (BLASDLLDirectory ${CMAKE_SOURCE_DIR}/private/dependencies/OpenBLAS/win64/v0.2.19/haswell/bin)
-  add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libopenblas.dll $<TARGET_FILE_DIR:math_test>)
-  add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libgcc_s_seh-1.dll $<TARGET_FILE_DIR:math_test>)
-  add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libgfortran-3.dll $<TARGET_FILE_DIR:math_test>)
-  add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libquadmath-0.dll $<TARGET_FILE_DIR:math_test>)
+  if(EXISTS ${BLASDLLDirectory})
+    add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libopenblas.dll $<TARGET_FILE_DIR:math_test>)
+    add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libgcc_s_seh-1.dll $<TARGET_FILE_DIR:math_test>)
+    add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libgfortran-3.dll $<TARGET_FILE_DIR:math_test>)
+    add_custom_command(TARGET math_test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BLASDLLDirectory}/libquadmath-0.dll $<TARGET_FILE_DIR:math_test>)
+  endif()
 endif()
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
