build/test working with CMake. Changed module directory.

--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,6 @@ external/llvm/include/
 external/llvm/lib/
 swig/
 dist/
+
+interfaces/javascript/emll_module/CMakeFiles/
+interfaces/javascript/emll_module/test/js/Testing/
