--- a/interfaces/javascript/CMakeLists.txt
+++ b/interfaces/javascript/CMakeLists.txt
@@ -9,3 +9,4 @@ include (CommonInterfaces)
 generate_interface(javascript ${CMAKE_CURRENT_SOURCE_DIR} "" "")
 add_dependencies(EMLL_javascript EMLL_common)
 
+add_subdirectory(emll_module)
