Compile.exe working Added two trivial models to examples (identity and times-two)

--- a/examples/data/CMakeLists.txt
+++ b/examples/data/CMakeLists.txt
@@ -8,7 +8,13 @@ set (MODEL_FILES model_1.json
                  tree_0.json
                  tree_1.json
                  tree_2.json
-                 tree_3.json)
+                 tree_3.json
+                 refined_tree_0.json
+                 refined_tree_1.json
+                 refined_tree_2.json
+                 refined_tree_3.json
+                 identity.json
+                 timesTwo.json)
 set (DATA_FILES ${MODEL_FILES} testData.txt tinyTestData.txt)
 add_custom_target(datafiles ALL DEPENDS ${DATA_FILES} SOURCES ${DATA_FILES})
 
