--- a/tools/utilities/apply/CMakeLists.txt
+++ b/tools/utilities/apply/CMakeLists.txt
@@ -25,7 +25,7 @@ set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 set (EXECUTABLE_OUTPUT_PATH ${GLOBAL_BIN_DIR}) 
 add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
 target_include_directories(${PROJ_NAME} PRIVATE include)
-target_link_libraries(${PROJ_NAME} utilities dataset model nodes common)
+target_link_libraries(${PROJ_NAME} utilities data model nodes common)
 
 # put this project in the tools/utilities folder in the IDE 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/utilities")
