--- a/libraries/evaluators/CMakeLists.txt
+++ b/libraries/evaluators/CMakeLists.txt
@@ -34,7 +34,7 @@ target_include_directories(${PROJ_NAME} PUBLIC include)
 if(CMAKE_COMPILER_IS_GNUCXX)
   target_compile_options(${PROJ_NAME} PRIVATE -fPIC)
 endif()
-target_link_libraries(${TEST_NAME} dataset)
+target_link_libraries(${TEST_NAME} data)
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
 #
@@ -53,7 +53,7 @@ source_group("include" FILES ${TEST_INCLUDE})
 
 add_executable(${TEST_NAME} ${TEST_SRC} ${TEST_INCLUDE} ${INCLUDE})
 target_include_directories(${TEST_NAME} PRIVATE test/include)
-target_link_libraries(${TEST_NAME} evaluators dataset linear testing)
+target_link_libraries(${TEST_NAME} evaluators data linear testing)
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
 
