--- a/tools/utilities/makeExamples/CMakeLists.txt
+++ b/tools/utilities/makeExamples/CMakeLists.txt
@@ -36,6 +36,11 @@ set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/utilities")
 set (EXAMPLE_DIR ${CMAKE_SOURCE_DIR}/examples/data)
 
 set (MODEL_FILES 
+${EXAMPLE_DIR}/identity.json
+${EXAMPLE_DIR}/times_two.json
+${EXAMPLE_DIR}/is_equal.json
+${EXAMPLE_DIR}/arg_max.json
+${EXAMPLE_DIR}/multi_out.json
 ${EXAMPLE_DIR}/model_1.json 
 ${EXAMPLE_DIR}/model_2.json
 ${EXAMPLE_DIR}/model_3.json
@@ -47,10 +52,6 @@ ${EXAMPLE_DIR}/refined_tree_0.json
 ${EXAMPLE_DIR}/refined_tree_1.json
 ${EXAMPLE_DIR}/refined_tree_2.json
 ${EXAMPLE_DIR}/refined_tree_3.json
-${EXAMPLE_DIR}/identity.json
-${EXAMPLE_DIR}/times_two.json
-${EXAMPLE_DIR}/is_equal.json
-${EXAMPLE_DIR}/arg_max.json
 )
 
 add_custom_command(TARGET ${PROJ_NAME} 
