--- a/libraries/data/CMakeLists.txt
+++ b/libraries/data/CMakeLists.txt
@@ -63,10 +63,12 @@ set (TEST_NAME ${PROJ_NAME}_test)
 PROJECT(${TEST_NAME})
 
 set (TEST_SRC test/src/main.cpp
+              test/src/Dataset_test.cpp
               test/src/DataVector_test.cpp
               test/src/Example_test.cpp)
 
-set (TEST_INCLUDE test/include/DataVector_test.h
+set (TEST_INCLUDE test/include/Dataset_test.h
+                  test/include/DataVector_test.h
                   test/include/Example_test.h)
 
 source_group("src" FILES ${TEST_SRC})
