--- a/libraries/predictors/CMakeLists.txt
+++ b/libraries/predictors/CMakeLists.txt
@@ -56,7 +56,7 @@ source_group("include" FILES ${TEST_INCLUDE})
 add_executable(${TEST_NAME} ${TEST_SRC} ${TEST_INCLUDE} ${INCLUDE} ${TCC})
 target_include_directories(${TEST_NAME} PRIVATE test/include)
 
-target_link_libraries(${TEST_NAME} testing predictors data linear)
+target_link_libraries(${TEST_NAME} testing predictors data)
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
 
