--- a/libraries/testing/CMakeLists.txt
+++ b/libraries/testing/CMakeLists.txt
@@ -22,6 +22,6 @@ source_group("tcc" FILES ${TCC})
 
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
 target_include_directories(${PROJ_NAME} PUBLIC include)
-target_link_libraries(${PROJ_NAME} linear)
+target_link_libraries(${PROJ_NAME})
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
