Work on trainers

--- a/.gitignore
+++ b/.gitignore
@@ -208,14 +208,9 @@ FakesAssemblies/
 # Visual Studio 6 workspace options file
 *.opt
 
-# LightSwitch generated files
-GeneratedArtifacts/
-_Pvt_Extensions/
-ModelManifest.xml
-/compile/doc/tex
-
 # Mac stuff
 .DS_Store
+build_xcode/
 
 # Emacs autosaves
 \#*\#
