--- a/tools/trainers/forestTrainer/CMakeLists.txt
+++ b/tools/trainers/forestTrainer/CMakeLists.txt
@@ -22,7 +22,7 @@ set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 set (EXECUTABLE_OUTPUT_PATH ${GLOBAL_BIN_DIR}) 
 add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
 target_include_directories(${PROJ_NAME} PRIVATE include)
-target_link_libraries(${PROJ_NAME} common data lossFunctions predictors trainers utilities)
+target_link_libraries(${PROJ_NAME} common data lossFunctions model nodes predictors trainers utilities)
 
 # put this project in the trainers folder in the IDE 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/trainers")
