--- a/tools/trainers/sgdTrainer/CMakeLists.txt
+++ b/tools/trainers/sgdTrainer/CMakeLists.txt
@@ -31,7 +31,12 @@ set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/trainers")
 set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 
 # tests
-set (TEST_NAME ${PROJ_NAME}_test)
+set (TEST_NAME ${PROJ_NAME}_test_1)
 add_test(NAME ${TEST_NAME}
          WORKING_DIRECTORY ${GLOBAL_BIN_DIR}
-         COMMAND ${PROJ_NAME} -idf ${CMAKE_SOURCE_DIR}/examples/data/testData.txt -dd 21 -omf sgdTrainer_model.xml -v -ne 20)
+         COMMAND ${PROJ_NAME} --inputDataFilename ${CMAKE_SOURCE_DIR}/examples/data/testData.txt --inputModelFile ${CMAKE_SOURCE_DIR}/examples/data/model_3.json --modelInputs 1012 --modelOutputs 1019.output -dd 3 --outputModelFilename sgdTrainer_model_3.json -v -ne 20)
+
+set (TEST_NAME ${PROJ_NAME}_test_2)
+add_test(NAME ${TEST_NAME}
+         WORKING_DIRECTORY ${GLOBAL_BIN_DIR}
+         COMMAND ${PROJ_NAME} --inputDataFilename ${CMAKE_SOURCE_DIR}/examples/data/testData.txt -dd auto --outputModelFilename sgdTrainer_model_0.json -v -ne 20)
