Least number of changes to get EMLL to build

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -3,16 +3,16 @@
 #
 include (CommonInterfaces)
 
-set (INTERFACE_SRC ../common/src/DataLoadersInterface.cpp)
+# set (INTERFACE_SRC ../common/src/DataLoadersInterface.cpp)
 
-set (INTERFACE_INCLUDE ../common/include/DataLoadersInterface.h)
+# set (INTERFACE_INCLUDE ../common/include/DataLoadersInterface.h)
 
 set (INTERFACE_MAIN ../common/EMLL.i)
 
 set (INTERFACE_FILES ../common/common.i
                      ../common/callback.i
                      ../common/loadModelAsync.i
-					 ../common/loadDatasetAsync.i
+                     ../common/loadDatasetAsync.i
                      ../common/dataset.i
                      ../common/evaluators.i
                      ../common/lossFunctions.i
@@ -24,11 +24,11 @@ set (INTERFACE_FILES ../common/common.i
                      ../common/unique_ptr.i
                      ../common/utilities.i)
 
-set (INTERFACE_DEPENDENCIES common dataset evaluators linear lossFunctions trainers predictors testing treeLayout utilities)
+set (INTERFACE_DEPENDENCIES common evaluators linear lossFunctions trainers predictors testing treeLayout utilities)
 
 # Add EMLL library include directories
 include_directories(../libraries/common/include)
-include_directories(../libraries/dataset/include)
+#include_directories(../libraries/dataset/include)
 include_directories(../libraries/evaluators/include)
 include_directories(../libraries/linear/include)
 include_directories(../libraries/lossFunctions/include)
@@ -42,7 +42,7 @@ include_directories(common/include)
 add_subdirectory(common)
 add_subdirectory(python)
 # add_subdirectory(R) # currently doesn't compile
-add_subdirectory(csharp)
-add_subdirectory(javascript)
+# add_subdirectory(csharp)
+# add_subdirectory(javascript)
 add_subdirectory(xml) 
 
