--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -24,13 +24,12 @@ set (INTERFACE_FILES ../common/common.i
                      ../common/unique_ptr.i
                      ../common/utilities.i)
 
-set (INTERFACE_DEPENDENCIES common evaluators linear lossFunctions trainers predictors testing treeLayout utilities)
+set (INTERFACE_DEPENDENCIES common evaluators lossFunctions trainers predictors testing treeLayout utilities)
 
 # Add EMLL library include directories
 include_directories(../libraries/common/include)
 #include_directories(../libraries/dataset/include)
 include_directories(../libraries/evaluators/include)
-include_directories(../libraries/linear/include)
 include_directories(../libraries/lossFunctions/include)
 include_directories(../libraries/model/include)
 include_directories(../libraries/nodes/include)
