Cleanup, fixed CMake problem

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -7,7 +7,7 @@ include (CommonInterfaces)
 if(WIN32)
   include (LLVMSetup)
 else()
-  find_package(LLVM OPTIONAL CONFIG)
+  find_package(LLVM CONFIG)
   if(LLVM_FOUND)
     include_directories(${LLVM_INCLUDE_DIRS})
     add_definitions(${LLVM_DEFINITIONS})
