--- a/interfaces/javascript/emll_module/CMakeLists.txt
+++ b/interfaces/javascript/emll_module/CMakeLists.txt
@@ -5,6 +5,23 @@
 set (PROJ_NAME emll_module)
 PROJECT(${PROJ_NAME})
 
+set (MODULE_FILES 
+    binding.gyp
+    buildme
+    buildme.cmd
+    copyMacLib.sh
+    copyLinuxLib.sh
+    copyWindowsLib.cmd
+    emll.d.ts
+    emll_manual.d.ts
+    index.d.ts
+    index.js
+    package.json
+    README.md)
+
+set (NODE_ABI_VERSION 50)
+set (ELECTRON_VERSION 1.4.4)
+
 find_program(NPM_EXECUTABLE npm)
 
 if(NPM_EXECUTABLE)
@@ -23,16 +40,22 @@ if(NPM_EXECUTABLE)
 
     if(WIN32)
         add_custom_target(${PROJ_NAME} ALL
-            COMMAND ${NPM_EXECUTABLE} run buildwintest
-#            COMMAND ${NPM_EXECUTABLE} run ${MODULE_BUILD_COMMAND}
+            COMMAND ${NPM_EXECUTABLE} run ${MODULE_BUILD_COMMAND}
             DEPENDS EMLL_javascript ${PROJ_NAME}_copy
-            WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
     else()
         add_custom_target(${PROJ_NAME} ALL
             COMMAND ${NPM_EXECUTABLE} run ${MODULE_BUILD_COMMAND}
             DEPENDS EMLL_javascript
             WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
     endif()
+
+    foreach(MODULE_FILE ${MODULE_FILES})
+        add_custom_command(TARGET ${PROJ_NAME} 
+                        PRE_BUILD
+                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} 
+                        COMMAND ${CMAKE_COMMAND} -E copy ${MODULE_FILE} ${CMAKE_CURRENT_BINARY_DIR})
+    endforeach()
 
     add_custom_command(TARGET ${PROJ_NAME} PRE_BUILD
                     COMMAND ${NPM_EXECUTABLE} install
