--- a/interfaces/javascript/emll_module/package.json
+++ b/interfaces/javascript/emll_module/package.json
@@ -7,7 +7,7 @@
     "install": "echo ",
     "build": "buildme",
     "buildmac": "npm install && node-gyp rebuild && ./copyMacLib.sh",
-    "buildwin": "npm install && node-gyp rebuild --target=0.36.7 --arch-x64 --dist-url=https://atom.io/download/atom-shell && copyWindowsLib",
+    "buildwin": "npm install && node-gyp rebuild --runtime=electron --target=1.4.4 --arch-x64 --dist-url=https://atom.io/download/atom-shell && copyWindowsLib",
     "buildlinux": "npm install && node-gyp rebuild && ./copyLinuxLib.sh",
     "buildwintest": "npm install && node-gyp rebuild && copyWindowsLib",
     "preinstall": "",
